loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:9: error: not found: value prednBiscuit
prednBiscuit()
^