loopfor.LoopFor.scala.code
var nbPas=0
var dejafait=0


while (estSurBiscuit()==false){
  avance()
  nbPas=nbPas+1
}
prednBiscuit()
for (dejaFait<-0 to nbPas){
  recule()
}

